--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-hide-on-scroll": "^0.1.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
